- generate random comments and replies

--- a/init_stock_data.ipynb
+++ b/init_stock_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,14 +12,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://finnhub.io/api/v1/\n"
+      "https://finnhub.io/api/v1/\n",
+      "AIzaSyAH_VnEyxMg1Wk3271PpShzwX_NATArEOM\n"
      ]
     }
    ],
@@ -30,13 +31,24 @@
     "\n",
     "FINNHUB_KEY = os.environ['FINNHUB_KEY']\n",
     "FINNHUB_URI = os.environ['FINNHUB_URI']\n",
+    "GG_GEMINI_API = os.environ['GG_GEMINI_API']\n",
     "\n",
-    "print(FINNHUB_URI)"
+    "print(FINNHUB_URI)\n",
+    "print(GG_GEMINI_API)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sample_symbol = 'GWSO'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -72,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -88,8 +100,8 @@
     "#1. Get all stock symbols\n",
     "stock_list_url = FINNHUB_URI + 'stock/symbol?exchange=US&token=' + FINNHUB_KEY\n",
     "\n",
-    "stock_list = custom_query(stock_list_url)\n",
-    "print(stock_list[0])"
+    "#stock_list = custom_query(stock_list_url)\n",
+    "#print(stock_list[0])"
    ]
   },
   {
@@ -150,7 +162,6 @@
    ],
    "source": [
     "#3 query basic details of stocks\n",
-    "sample_symbol = 'GWSO'\n",
     "stock_detail_url = FINNHUB_URI + 'stock/profile2?symbol='+sample_symbol+'&token=' + FINNHUB_KEY\n",
     "\n",
     "stock_detail = custom_query(stock_detail_url)\n",
@@ -247,13 +258,179 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "curl \"GEMINI_API_KEY\" \\\n",
+    "-H 'Content-Type: application/json' \\\n",
+    "-X POST \\\n",
+    "-d '{\n",
+    "  \"contents\": [{\n",
+    "    \"parts\":[{\"text\": \"Explain how AI works\"}]\n",
+    "    }]\n",
+    "   }'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import re\n",
+    "import json\n",
+    "\n",
+    "def extract_json(text_response):\n",
+    "    # This pattern matches a string that starts with '{' and ends with '}'\n",
+    "    pattern = r'\\{[^{}]*\\}'\n",
+    "    matches = re.finditer(pattern, text_response)\n",
+    "    json_objects = []\n",
+    "    for match in matches:\n",
+    "        json_str = match.group(0)\n",
+    "        try:\n",
+    "            # Validate if the extracted string is valid JSON\n",
+    "            json_obj = json.loads(json_str)\n",
+    "            json_objects.append(json_obj)\n",
+    "        except json.JSONDecodeError:\n",
+    "            # Extend the search for nested structures\n",
+    "            extended_json_str = extend_search(text_response, match.span())\n",
+    "            try:\n",
+    "                json_obj = json.loads(extended_json_str)\n",
+    "                json_objects.append(json_obj)\n",
+    "            except json.JSONDecodeError:\n",
+    "                # Handle cases where the extraction is not valid JSON\n",
+    "                continue\n",
+    "    if json_objects:\n",
+    "        return json_objects\n",
+    "    else:\n",
+    "        return None  # Or handle this case as you prefer\n",
+    "    \n",
+    "def extend_search(text, span):\n",
+    "    # Extend the search to try to capture nested structures\n",
+    "    start, end = span\n",
+    "    nest_count = 0\n",
+    "    for i in range(start, len(text)):\n",
+    "        if text[i] == '{':\n",
+    "            nest_count += 1\n",
+    "        elif text[i] == '}':\n",
+    "            nest_count -= 1\n",
+    "            if nest_count == 0:\n",
+    "                return text[start:i+1]\n",
+    "    return text[start:end]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Send a POST request\n",
+    "def post_request_gemini(text_prompt):\n",
+    "    gemini_url = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key='+GG_GEMINI_API\n",
+    "    HEADER = {'Content-Type': 'application/json'}\n",
+    "    json_data = {\n",
+    "        \"contents\": [\n",
+    "            { \"parts\": [\n",
+    "                {\"text\": text_prompt + \" Please provide a response in a structured JSON format.\"}]\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "\n",
+    "    try:\n",
+    "        r = requests.post(gemini_url, headers=HEADER, json=json_data)\n",
+    "        return r.json()\n",
+    "    except Exception as e:\n",
+    "       print(e)\n",
+    "       return e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#generate random posts for each stock\n",
+    "fake_comments = post_request_gemini(\"Generate 50 random comments for this stock symbol \" + sample_symbol +\". Each setence should have 30 to 50 words length.\") #10 sec\n",
+    "raw_comments = fake_comments['candidates'][0]['content']['parts'][0]['text']\n",
+    "#extract json structure\n",
+    "json_comments = extract_json(raw_comments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "\"The management team at GWSO appears highly competent and has a demonstrably strong track record in the industry.  However, the market's perception of their strategies and execution plays a significant role in influencing the stock price.\""
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_comment = json_comments[0]['comments'][5]\n",
+    "sample_comment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fake_replies = post_request_gemini(\"Generate 7 random replies for this comment: \" + sample_comment +\". Each reply should have 10 to 15 words length.\") #10 sec\n",
+    "raw_replies = fake_replies['candidates'][0]['content']['parts'][0]['text']\n",
+    "#extract json structure\n",
+    "json_replies = extract_json(raw_replies)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'id': 1,\n",
+       "  'reply': 'True, perception often trumps reality in the volatile stock market.'},\n",
+       " {'id': 2,\n",
+       "  'reply': 'Market sentiment is crucial; GWSO needs strong PR to shift perception.'},\n",
+       " {'id': 3,\n",
+       "  'reply': \"Competence isn't enough; successful execution and communication are key.\"},\n",
+       " {'id': 4,\n",
+       "  'reply': \"GWSO's stock price hinges on investor confidence and market trends.\"},\n",
+       " {'id': 5,\n",
+       "  'reply': 'Long-term success depends on aligning strategy with market expectations.'},\n",
+       " {'id': 6,\n",
+       "  'reply': 'Solid fundamentals are important, but market narrative matters even more.'},\n",
+       " {'id': 7,\n",
+       "  'reply': 'Effective investor relations can bridge the gap between competence and perception.'}]"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sample_reply = json_replies\n",
+    "sample_reply"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "#generate random posts for each stock"
-   ]
+   "source": []
   }
  ],
  "metadata": {
