- remove print API key

--- a/init_stock_data.ipynb
+++ b/init_stock_data.ipynb
@@ -12,18 +12,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 56,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "https://finnhub.io/api/v1/\n",
-      "AIzaSyAH_VnEyxMg1Wk3271PpShzwX_NATArEOM\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
     "load_dotenv() \n",
@@ -31,10 +22,7 @@
     "\n",
     "FINNHUB_KEY = os.environ['FINNHUB_KEY']\n",
     "FINNHUB_URI = os.environ['FINNHUB_URI']\n",
-    "GG_GEMINI_API = os.environ['GG_GEMINI_API']\n",
-    "\n",
-    "print(FINNHUB_URI)\n",
-    "print(GG_GEMINI_API)"
+    "GG_GEMINI_API = os.environ['GG_GEMINI_API']\n"
    ]
   },
   {
