- generate and save random user names

--- a/init_stock_data.ipynb
+++ b/init_stock_data.ipynb
@@ -418,6 +418,51 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "#save comment"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#todo generate random users\n",
+    "#avatar: https://i.pravatar.cc/150?u=martinkeith\n",
+    "fake_names = post_request_gemini(\"Generate 200 random people names.\") #10 sec\n",
+    "raw_names = fake_names['candidates'][0]['content']['parts'][0]['text']\n",
+    "#extract json structure\n",
+    "json_names = extract_json(raw_names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name_list = json_names[0]['people']\n",
+    "#save name to db\n",
+    "tbl_user = db['tbl_user']\n",
+    "for name in name_list:\n",
+    "    key = name.lower().replace(' ', '')\n",
+    "    #upsert to db\n",
+    "    db_user_detail = tbl_user.find_one({'key': key})\n",
+    "    if db_user_detail is None:\n",
+    "        #insert\n",
+    "        tbl_user.insert_one({\n",
+    "            'name': name,\n",
+    "            'key': key\n",
+    "        })\n",
+    "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
