- save stock basic detail

--- a/init_stock_data.ipynb
+++ b/init_stock_data.ipynb
@@ -424,12 +424,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#todo generate random users\n",
-    "#avatar: https://i.pravatar.cc/150?u=martinkeith\n",
+    "#generate random users\n",
+    "#avatar: https://i.pravatar.cc/150?u=martinkeith (150 x 150)\n",
     "fake_names = post_request_gemini(\"Generate 200 random people names.\") #10 sec\n",
     "raw_names = fake_names['candidates'][0]['content']['parts'][0]['text']\n",
     "#extract json structure\n",
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -448,14 +448,37 @@
     "for name in name_list:\n",
     "    key = name.lower().replace(' ', '')\n",
     "    #upsert to db\n",
-    "    db_user_detail = tbl_user.find_one({'key': key})\n",
+    "    db_user_detail = tbl_user.find_one({'usr': key})\n",
     "    if db_user_detail is None:\n",
     "        #insert\n",
     "        tbl_user.insert_one({\n",
     "            'name': name,\n",
-    "            'key': key\n",
+    "            'usr': key\n",
     "        })\n",
     "       "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'tylermoore'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#find random name from db\n",
+    "random_name = tbl_user.aggregate([{\"$sample\": {\"size\": 1}}]).next()\n",
+    "\n",
+    "random_name['usr']"
    ]
   },
   {
