- done generate comments and replies for 1 stock

--- a/cron_fillup_stock_detail.ipynb
+++ b/cron_fillup_stock_detail.ipynb
@@ -12,6 +12,18 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_COMMENT = 20    #each stock should have max 20 comments\n",
+    "MAX_REPLY = 6   #each comment should have max 6 comments\n",
+    "MAX_LIKE = 50   #each comment or like should have max 50 likes\n",
+    "MIN_COMMENT_TIMESTAMP = 1705571059  #sec (18 Jan 2024)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 9,
    "metadata": {},
    "outputs": [],
@@ -38,13 +50,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
     "db_client = pymongo.MongoClient('mongodb://localhost:27017')\n",
     "collections = db_client['stock_forum']\n",
-    "tbl_stock = collections['tbl_stock']"
+    "tbl_stock = collections['tbl_stock']\n",
+    "tbl_user = collections['tbl_user']\n",
+    "tbl_comment = collections['tbl_comment']\n",
+    "tbl_reply = collections['tbl_reply']"
    ]
   },
   {
@@ -88,27 +103,215 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 19,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "\"country\": \"CA\",\n",
-    "\"currency\": \"CAD\",\n",
-    "\"estimateCurrency\": \"CAD\",\n",
-    "\"exchange\": \"TSX VENTURE EXCHANGE - NEX\",\n",
-    "\"finnhubIndustry\": \"Energy\",\n",
-    "\"ipo\": \"2007-04-27\",\n",
-    "\"logo\": \"https://static2.finnhub.io/file/publicdatany/finnhubimage/stock_logo/942976380016.png\",\n",
-    "\"marketCapitalization\": 0.309138,\n",
-    "\"name\": \"Terrace Energy Corp\",\n",
-    "\"phone\": \"16042827897\",\n",
-    "\"shareOutstanding\": 7.73,\n",
-    "\"ticker\": \"TZR.H.V\",\n",
-    "\"weburl\": \"http://terraceenergy.net/\","
+    "import re\n",
+    "import json\n",
+    "\n",
+    "def extract_json(text_response):\n",
+    "    # This pattern matches a string that starts with '{' and ends with '}'\n",
+    "    pattern = r'\\{[^{}]*\\}'\n",
+    "    matches = re.finditer(pattern, text_response)\n",
+    "    json_objects = []\n",
+    "    for match in matches:\n",
+    "        json_str = match.group(0)\n",
+    "        try:\n",
+    "            # Validate if the extracted string is valid JSON\n",
+    "            json_obj = json.loads(json_str)\n",
+    "            json_objects.append(json_obj)\n",
+    "        except json.JSONDecodeError:\n",
+    "            # Extend the search for nested structures\n",
+    "            extended_json_str = extend_search(text_response, match.span())\n",
+    "            try:\n",
+    "                json_obj = json.loads(extended_json_str)\n",
+    "                json_objects.append(json_obj)\n",
+    "            except json.JSONDecodeError:\n",
+    "                # Handle cases where the extraction is not valid JSON\n",
+    "                continue\n",
+    "    if json_objects:\n",
+    "        return json_objects\n",
+    "    else:\n",
+    "        return None  # Or handle this case as you prefer\n",
+    "    \n",
+    "def extend_search(text, span):\n",
+    "    # Extend the search to try to capture nested structures\n",
+    "    start, end = span\n",
+    "    nest_count = 0\n",
+    "    for i in range(start, len(text)):\n",
+    "        if text[i] == '{':\n",
+    "            nest_count += 1\n",
+    "        elif text[i] == '}':\n",
+    "            nest_count -= 1\n",
+    "            if nest_count == 0:\n",
+    "                return text[start:i+1]\n",
+    "    return text[start:end]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Send a POST request\n",
+    "def post_request_gemini(text_prompt):\n",
+    "    gemini_url = 'https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent?key='+GG_GEMINI_API\n",
+    "    HEADER = {'Content-Type': 'application/json'}\n",
+    "    json_data = {\n",
+    "        \"contents\": [\n",
+    "            { \"parts\": [\n",
+    "                {\"text\": text_prompt + \" Please provide a response in a structured JSON format.\"}]\n",
+    "            }\n",
+    "        ]\n",
+    "    }\n",
+    "\n",
+    "    try:\n",
+    "        r = requests.post(gemini_url, headers=HEADER, json=json_data)\n",
+    "        return r.json()\n",
+    "    except Exception as e:\n",
+    "       print(e)\n",
+    "       return e"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_rand_comments():\n",
+    "    #generate random posts for each stock\n",
+    "    fake_comments = post_request_gemini('Generate 0 up to '+str(MAX_COMMENT)+' random comments for this stock symbol ' + symbol +\". Each setence should have 30 to 50 words length.\") #10 sec\n",
+    "    raw_comments = fake_comments['candidates'][0]['content']['parts'][0]['text']\n",
+    "    #extract json structure\n",
+    "    json_comments = extract_json(raw_comments)\n",
+    "    return json_comments[0]['comments']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_rand_relies(str_comment):\n",
+    "    reply_list = []\n",
+    "    #generate random relies for the comment\n",
+    "    fake_replies = post_request_gemini('Generate 0 up to '+str(MAX_REPLY)+' random replies for the comment: ' + str_comment +' of this stock symbol '+symbol+'. Each reply should have 10 to 20 words length.') #10 sec\n",
+    "    if 'candidates' in fake_replies:\n",
+    "        raw_replies = fake_replies['candidates'][0]['content']['parts'][0]['text']\n",
+    "        #extract json structure\n",
+    "        json_replies = extract_json(raw_replies)\n",
+    "        for reply in json_replies:\n",
+    "            if 'text' in reply:\n",
+    "                reply_list.append(reply['text'])\n",
+    "    return reply_list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import uuid\n",
+    "def generate_random_uuid():\n",
+    "    return str(uuid.uuid4())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def get_random_like():\n",
+    "    return random.randint(0, MAX_LIKE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "import time\n",
+    "\n",
+    "def get_random_timestamp(start_time):\n",
+    "    current_time = int(time.time())\n",
+    "    time_delta = current_time - start_time\n",
+    "    random_offset = random.randint(0, time_delta)\n",
+    "    random_timestamp = start_time + random_offset\n",
+    "    return random_timestamp"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_comment(str_comment):\n",
+    "    #get random user\n",
+    "    random_name = tbl_user.aggregate([{\"$sample\": {\"size\": 1}}]).next()\n",
+    "    username = random_name['usr']\n",
+    "    #generate random ID\n",
+    "    comment_uuid = generate_random_uuid()\n",
+    "    #generate random likes\n",
+    "    cmt_like = get_random_like()\n",
+    "    #generate random timestamp\n",
+    "    rand_time = get_random_timestamp(MIN_COMMENT_TIMESTAMP)\n",
+    "    #insert this comment to db\n",
+    "    comment_detail = {\n",
+    "        'symbol': symbol,\n",
+    "        'uuid': comment_uuid,\n",
+    "        'usr': username,\n",
+    "        'like': cmt_like,\n",
+    "        'time': rand_time,\n",
+    "        'text': str_comment\n",
+    "    }\n",
+    "    tbl_comment.insert_one(comment_detail)\n",
+    "    return comment_detail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def insert_reply(str_reply, comment_detail):\n",
+    "    #get random user\n",
+    "    random_name = tbl_user.aggregate([{\"$sample\": {\"size\": 1}}]).next()\n",
+    "    username = random_name['usr']\n",
+    "    #generate random ID\n",
+    "    reply_uuid = generate_random_uuid()\n",
+    "    #generate random likes\n",
+    "    reply_like = get_random_like()\n",
+    "    #generate random timestamp\n",
+    "    rand_time = get_random_timestamp(comment_detail['time'])\n",
+    "    #insert this reply to db\n",
+    "    reply_detail = {\n",
+    "        'uuid': reply_uuid,\n",
+    "        'cmt_uuid': comment_detail['uuid'],\n",
+    "        'usr': username,\n",
+    "        'like': reply_like,\n",
+    "        'time': rand_time,\n",
+    "        'text': str_reply\n",
+    "    }\n",
+    "    tbl_reply.insert_one(reply_detail)\n",
+    "    return reply_detail"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -116,6 +319,18 @@
      "output_type": "stream",
      "text": [
       "https://finnhub.io/api/v1/stock/profile2?symbol=TCRRF&token=cu5b37pr01qqj8u65ufgcu5b37pr01qqj8u65ug0\n"
+     ]
+    },
+    {
+     "ename": "KeyError",
+     "evalue": "'text'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[52], line 23\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m str_comment \u001b[38;5;129;01min\u001b[39;00m comment_list:\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;66;03m#save comment to db\u001b[39;00m\n\u001b[1;32m     22\u001b[0m     comment_detail \u001b[38;5;241m=\u001b[39m insert_comment(str_comment)\n\u001b[0;32m---> 23\u001b[0m     reply_list \u001b[38;5;241m=\u001b[39m \u001b[43mget_rand_relies\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstr_comment\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;66;03m#print(reply_list)\u001b[39;00m\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(reply_list) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
+      "Cell \u001b[0;32mIn[51], line 10\u001b[0m, in \u001b[0;36mget_rand_relies\u001b[0;34m(str_comment)\u001b[0m\n\u001b[1;32m      8\u001b[0m     json_replies \u001b[38;5;241m=\u001b[39m extract_json(raw_replies)\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m reply \u001b[38;5;129;01min\u001b[39;00m json_replies:\n\u001b[0;32m---> 10\u001b[0m         reply_list\u001b[38;5;241m.\u001b[39mappend(\u001b[43mreply\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtext\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m reply_list\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'text'"
      ]
     }
    ],
@@ -126,14 +341,27 @@
     "    stock_detail = custom_query(stock_detail_url)\n",
     "    #print(stock_detail)\n",
     "    if stock_detail is not None and 'name' in stock_detail:\n",
-    "        #update to db\n",
+    "        #update stock info to db\n",
     "        tbl_stock.update_one({'symbol': symbol}, {'$set':{\n",
     "                'name': stock_detail['name'],\n",
     "                'industry': stock_detail['finnhubIndustry'],\n",
     "                'ipo': stock_detail['ipo'],\n",
     "                'cap': stock_detail['marketCapitalization'],\n",
     "                'web': stock_detail['weburl']\n",
-    "            }})\n"
+    "            }})\n",
+    "        #generate and save comments\n",
+    "        comment_list = get_rand_comments()\n",
+    "        #print(comment_list)\n",
+    "        if len(comment_list) > 0:\n",
+    "            #take each comment\n",
+    "            for str_comment in comment_list:\n",
+    "                #save comment to db\n",
+    "                comment_detail = insert_comment(str_comment)\n",
+    "                reply_list = get_rand_relies(str_comment)\n",
+    "                #print(reply_list)\n",
+    "                if len(reply_list) > 0:\n",
+    "                    for str_reply in reply_list:\n",
+    "                        insert_reply(str_reply, comment_detail)"
    ]
   },
   {
