--- a/cron_fillup_stock_detail.ipynb
+++ b/cron_fillup_stock_detail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 169,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 170,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 171,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,36 +64,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'_id': ObjectId('678ac0362118fc1550f5d055'), 'symbol': 'TCRRF', 'mic': 'OOTC'}\n"
+      "symbol: GWSO\n"
      ]
     }
    ],
    "source": [
     "db_stock = tbl_stock.find_one({'name': None})\n",
-    "print(db_stock)\n",
     "\n",
     "symbol = ''\n",
     "if db_stock is not None:\n",
-    "    symbol = db_stock['symbol']"
+    "    symbol = db_stock['symbol']\n",
+    "    print('symbol: ' + symbol)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 174,
    "metadata": {},
    "outputs": [],
    "source": [
     "#query data from Finnhub but limit 30 APIs/second\n",
     "#https://finnhub.io/docs/api/stock-symbols\n",
     "def custom_query(get_url):\n",
-    "    print(get_url)\n",
+    "    #print(get_url)\n",
     "    try:\n",
     "        r = requests.get(get_url)\n",
     "        return r.json()\n",
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,29 +178,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_rand_comments():\n",
     "    #generate random posts for each stock\n",
-    "    fake_comments = post_request_gemini('Generate 0 up to '+str(MAX_COMMENT)+' random comments for this stock symbol ' + symbol +\". Each setence should have 30 to 50 words length.\") #10 sec\n",
+    "    fake_comments = post_request_gemini('Generate 0 up to '+str(MAX_COMMENT)+' random comments for this stock symbol ' + symbol +\" natually as human saying. Each setence should have 30 to 50 words length.\") #10 sec\n",
     "    raw_comments = fake_comments['candidates'][0]['content']['parts'][0]['text']\n",
     "    #extract json structure\n",
     "    json_comments = extract_json(raw_comments)\n",
-    "    return json_comments[0]['comments']"
+    "    return json_comments"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_rand_relies(str_comment):\n",
     "    reply_list = []\n",
     "    #generate random relies for the comment\n",
-    "    fake_replies = post_request_gemini('Generate 0 up to '+str(MAX_REPLY)+' random replies for the comment: ' + str_comment +' of this stock symbol '+symbol+'. Each reply should have 10 to 20 words length.') #10 sec\n",
+    "    fake_replies = post_request_gemini('Generate 0 up to '+str(MAX_REPLY)+' random replies for the comment: ' + str_comment +' of this stock symbol '+symbol+' natually as human saying. Each reply should have 10 to 20 words length.') #10 sec\n",
     "    if 'candidates' in fake_replies:\n",
     "        raw_replies = fake_replies['candidates'][0]['content']['parts'][0]['text']\n",
     "        #extract json structure\n",
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 179,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -274,7 +274,7 @@
     "        'usr': username,\n",
     "        'like': cmt_like,\n",
     "        'time': rand_time,\n",
-    "        'text': str_comment\n",
+    "        'text': str_comment.replace('  ', ' ')\n",
     "    }\n",
     "    tbl_comment.insert_one(comment_detail)\n",
     "    return comment_detail"
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
     "        'usr': username,\n",
     "        'like': reply_like,\n",
     "        'time': rand_time,\n",
-    "        'text': str_reply\n",
+    "        'text': str_reply.replace('  ', ' ')\n",
     "    }\n",
     "    tbl_reply.insert_one(reply_detail)\n",
     "    return reply_detail"
@@ -311,26 +311,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://finnhub.io/api/v1/stock/profile2?symbol=TCRRF&token=cu5b37pr01qqj8u65ufgcu5b37pr01qqj8u65ug0\n"
-     ]
-    },
-    {
-     "ename": "KeyError",
-     "evalue": "'text'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[52], line 23\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m str_comment \u001b[38;5;129;01min\u001b[39;00m comment_list:\n\u001b[1;32m     21\u001b[0m     \u001b[38;5;66;03m#save comment to db\u001b[39;00m\n\u001b[1;32m     22\u001b[0m     comment_detail \u001b[38;5;241m=\u001b[39m insert_comment(str_comment)\n\u001b[0;32m---> 23\u001b[0m     reply_list \u001b[38;5;241m=\u001b[39m \u001b[43mget_rand_relies\u001b[49m\u001b[43m(\u001b[49m\u001b[43mstr_comment\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     24\u001b[0m     \u001b[38;5;66;03m#print(reply_list)\u001b[39;00m\n\u001b[1;32m     25\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(reply_list) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n",
-      "Cell \u001b[0;32mIn[51], line 10\u001b[0m, in \u001b[0;36mget_rand_relies\u001b[0;34m(str_comment)\u001b[0m\n\u001b[1;32m      8\u001b[0m     json_replies \u001b[38;5;241m=\u001b[39m extract_json(raw_replies)\n\u001b[1;32m      9\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m reply \u001b[38;5;129;01min\u001b[39;00m json_replies:\n\u001b[0;32m---> 10\u001b[0m         reply_list\u001b[38;5;241m.\u001b[39mappend(\u001b[43mreply\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mtext\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n\u001b[1;32m     11\u001b[0m \u001b[38;5;28;01mreturn\u001b[39;00m reply_list\n",
-      "\u001b[0;31mKeyError\u001b[0m: 'text'"
+      "Finish symbol GWSO\n"
      ]
     }
    ],
@@ -354,14 +342,15 @@
     "        #print(comment_list)\n",
     "        if len(comment_list) > 0:\n",
     "            #take each comment\n",
-    "            for str_comment in comment_list:\n",
+    "            for json_comment in comment_list:\n",
     "                #save comment to db\n",
-    "                comment_detail = insert_comment(str_comment)\n",
-    "                reply_list = get_rand_relies(str_comment)\n",
+    "                comment_detail = insert_comment(json_comment['comment'])\n",
+    "                reply_list = get_rand_relies(json_comment['comment'])\n",
     "                #print(reply_list)\n",
     "                if len(reply_list) > 0:\n",
     "                    for str_reply in reply_list:\n",
-    "                        insert_reply(str_reply, comment_detail)"
+    "                        insert_reply(str_reply, comment_detail)\n",
+    "        print('Finish symbol ' + symbol)"
    ]
   },
   {
