- set name for stocks that cannot get details

--- a/cron_fillup_stock_detail.ipynb
+++ b/cron_fillup_stock_detail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 169,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "MAX_COMMENT = 20    #each stock should have max 20 comments\n",
-    "MAX_REPLY = 6   #each comment should have max 6 comments\n",
+    "MAX_COMMENT = 15    #each stock should have max 20 comments\n",
+    "MAX_REPLY = 5   #each comment should have max 6 comments\n",
     "MAX_LIKE = 50   #each comment or like should have max 50 likes\n",
     "MIN_COMMENT_TIMESTAMP = 1705571059  #sec (18 Jan 2024)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 171,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "symbol: GWSO\n"
+      "symbol: AMBZ\n"
      ]
     }
    ],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 174,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 176,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 177,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 178,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 179,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 180,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 181,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -282,7 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,14 +311,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Finish symbol GWSO\n"
+      "{'country': 'US', 'currency': '', 'estimateCurrency': '', 'exchange': 'OTC MARKETS', 'finnhubIndustry': 'Banking', 'ipo': '2000-07-25', 'logo': 'https://static2.finnhub.io/file/publicdatany/finnhubimage/stock_logo/942959110886.png', 'marketCapitalization': 402.130016, 'name': 'American Business Bank', 'phone': '12134304000', 'shareOutstanding': 9.1, 'ticker': 'AMBZ', 'weburl': 'https://americanbb.bank/'}\n",
+      "Finish symbol AMBZ\n"
      ]
     }
    ],
@@ -350,7 +351,12 @@
     "                if len(reply_list) > 0:\n",
     "                    for str_reply in reply_list:\n",
     "                        insert_reply(str_reply, comment_detail)\n",
-    "        print('Finish symbol ' + symbol)"
+    "    else:\n",
+    "        #somehow cannot get detail of this stock, mark it to process later\n",
+    "        tbl_stock.update_one({'symbol': symbol}, {'$set':{\n",
+    "                \"name\" : \"no_detail\"\n",
+    "            }})\n",
+    "    print('Finish symbol ' + symbol)\n"
    ]
   },
   {
