--- a/cron_fillup_stock_detail.ipynb
+++ b/cron_fillup_stock_detail.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,14 +64,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "symbol: AMBZ\n"
+      "symbol: MAHMF\n"
      ]
     }
    ],
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,7 +104,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "def get_random_like():\n",
+    "    return random.randint(0, MAX_LIKE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_random_number(max_num):\n",
+    "    return random.randint(1, max_num)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -152,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,13 +200,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_rand_comments():\n",
+    "    comment_num = get_random_number(MAX_COMMENT)\n",
     "    #generate random posts for each stock\n",
-    "    fake_comments = post_request_gemini('Generate 0 up to '+str(MAX_COMMENT)+' random comments for this stock symbol ' + symbol +\" natually as human saying. Each setence should have 30 to 50 words length.\") #10 sec\n",
+    "    fake_comments = post_request_gemini('Generate '+str(comment_num)+' random comments for this stock symbol ' + symbol +\" natually as human saying. Each setence should have 30 to 50 words length.\") #10 sec\n",
+    "    # print(fake_comments)\n",
     "    raw_comments = fake_comments['candidates'][0]['content']['parts'][0]['text']\n",
     "    #extract json structure\n",
     "    json_comments = extract_json(raw_comments)\n",
@@ -193,14 +217,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_rand_relies(str_comment):\n",
+    "    reply_num = get_random_number(MAX_REPLY)\n",
     "    reply_list = []\n",
     "    #generate random relies for the comment\n",
-    "    fake_replies = post_request_gemini('Generate 0 up to '+str(MAX_REPLY)+' random replies for the comment: ' + str_comment +' of this stock symbol '+symbol+' natually as human saying. Each reply should have 10 to 20 words length.') #10 sec\n",
+    "    fake_replies = post_request_gemini('Generate '+str(reply_num)+' random replies for the comment: ' + str_comment +' of this stock symbol '+symbol+' natually as human saying. Each reply should have 10 to 20 words length.') #10 sec\n",
     "    if 'candidates' in fake_replies:\n",
     "        raw_replies = fake_replies['candidates'][0]['content']['parts'][0]['text']\n",
     "        #extract json structure\n",
@@ -213,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -224,19 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import random\n",
-    "\n",
-    "def get_random_like():\n",
-    "    return random.randint(0, MAX_LIKE)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,11 +266,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "def insert_comment(str_comment):\n",
+    "    #print(str_comment)\n",
     "    #get random user\n",
     "    random_name = tbl_user.aggregate([{\"$sample\": {\"size\": 1}}]).next()\n",
     "    username = random_name['usr']\n",
@@ -282,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -311,15 +325,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'country': 'US', 'currency': '', 'estimateCurrency': '', 'exchange': 'OTC MARKETS', 'finnhubIndustry': 'Banking', 'ipo': '2000-07-25', 'logo': 'https://static2.finnhub.io/file/publicdatany/finnhubimage/stock_logo/942959110886.png', 'marketCapitalization': 402.130016, 'name': 'American Business Bank', 'phone': '12134304000', 'shareOutstanding': 9.1, 'ticker': 'AMBZ', 'weburl': 'https://americanbb.bank/'}\n",
-      "Finish symbol AMBZ\n"
+      "I've been keeping a close eye on MAHMF for a while now, and while the recent dip is concerning, I'm holding onto my shares.  The long-term potential in this sector seems promising, and I believe that with some patience, this stock could rebound and ultimately deliver strong returns. I'm not planning to sell anytime soon, personally.\n",
+      "Honestly, MAHMF's performance has been a bit of a rollercoaster lately.  The market volatility is affecting everything, but I'm trying to stay optimistic.  I've done some research into their recent developments and it seems like they're navigating some challenges but still showing potential for growth down the line. Time will tell, I guess.\n",
+      "Finish symbol MAHMF\n"
      ]
     }
    ],
@@ -330,17 +345,9 @@
     "    stock_detail = custom_query(stock_detail_url)\n",
     "    #print(stock_detail)\n",
     "    if stock_detail is not None and 'name' in stock_detail:\n",
-    "        #update stock info to db\n",
-    "        tbl_stock.update_one({'symbol': symbol}, {'$set':{\n",
-    "                'name': stock_detail['name'],\n",
-    "                'industry': stock_detail['finnhubIndustry'],\n",
-    "                'ipo': stock_detail['ipo'],\n",
-    "                'cap': stock_detail['marketCapitalization'],\n",
-    "                'web': stock_detail['weburl']\n",
-    "            }})\n",
     "        #generate and save comments\n",
     "        comment_list = get_rand_comments()\n",
-    "        #print(comment_list)\n",
+    "        # print(comment_list)\n",
     "        if len(comment_list) > 0:\n",
     "            #take each comment\n",
     "            for json_comment in comment_list:\n",
@@ -351,6 +358,14 @@
     "                if len(reply_list) > 0:\n",
     "                    for str_reply in reply_list:\n",
     "                        insert_reply(str_reply, comment_detail)\n",
+    "        #update stock info to db\n",
+    "        tbl_stock.update_one({'symbol': symbol}, {'$set':{\n",
+    "                'name': stock_detail['name'],\n",
+    "                'industry': stock_detail['finnhubIndustry'],\n",
+    "                'ipo': stock_detail['ipo'],\n",
+    "                'cap': stock_detail['marketCapitalization'],\n",
+    "                'web': stock_detail['weburl']\n",
+    "            }})\n",
     "    else:\n",
     "        #somehow cannot get detail of this stock, mark it to process later\n",
     "        tbl_stock.update_one({'symbol': symbol}, {'$set':{\n",
